# calculator

./: .buildinfo  LICENSE  README.md  docs.sh  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.sh
.github/: pull_request_template.md
.github/workflows/: sphinx.yml
_modules/: index.html
_modules/src/calc_numbers/: calc_numbers.html  calculator.html
_modules/src/custom_logger/: custom_logger.html
_sources/: index.md.txt
_sources/api/_autosummary/: src.calc_numbers.calc_numbers.main.rst.txt  src.calc_numbers.calc_numbers.rst.txt  src.calc_numbers.calculator.Calculator.rst.txt  src.custom_logger.custom_logger.color.rst.txt  src.custom_logger.custom_logger.my_logger.rst.txt  (+1 more)
_sources/markdown/: index.md.txt
api/: index.html
api/_autosummary/: src.calc_numbers.calc_numbers.html  src.calc_numbers.calc_numbers.main.html  src.calc_numbers.calculator.Calculator.html  src.calc_numbers.calculator.html  src.calc_numbers.html  src.custom_logger.custom_logger.color.html  src.custom_logger.custom_logger.get_logger.html  src.custom_logger.custom_logger.html  src.custom_logger.custom_logger.my_logger.html  src.custom_logger.html  src.html
docs/: Makefile  conf.py  requirements.txt
docs/_static/: style.css
docs/_templates/: custom-class-template.rst  custom-function-template.rst  custom-module-template.rst
docs/api/: index.rst
docs/markdown/: installation.md
markdown/: index.html  installation.html
src/calc_numbers/: __init__.py  calc_numbers.py  calculator.py
src/custom_logger/: custom_logger.py
(+5 files in other folders)
